订单确认和领导审核网格里增加单价字段 修改订单里增加单价栏，且客服可以修改单价，并重新计算价格 客户ID那个字段去掉

--- a/OpenAuth.Mvc/Views/OrderApprove/Index.cshtml
+++ b/OpenAuth.Mvc/Views/OrderApprove/Index.cshtml
@@ -70,7 +70,7 @@
 
     <div id="editDlg2" style="display: none">
         <div class="col-xs-12">
-            <form class="form-horizontal" id="editForm">
+            <form class="form-horizontal" id="editForm2">
                 <br />
 
                 <div class="form-group">
