allow to input decimal in OrderPrice add Send SMS function in OpenAuth.App.SendSmsApp, but seems it doesn't work

--- a/OpenAuth.Mvc/Views/Login/Index.cshtml
+++ b/OpenAuth.Mvc/Views/Login/Index.cshtml
@@ -67,7 +67,7 @@
                                                 </div>
                                                 <div class="header"></div>
                                                 <div class="layui-form-item">
-                                                    <div class="col-sm3 layui-inline blue lighter"><a href="#">忘记密码</a></div>
+                                                    <div class="col-sm3 layui-inline blue lighter"><a href="#" onclick="forgetPassword()">忘记密码</a></div>
                                                     <div class="col-sm6 layui-inline"></div>
                                                     <div class="col-sm3 layui-inline blue lighter"><a href="~/Login/Login4Registration">注册新用户</a></div>
                                                 </div>
