--- a/OpenAuth.Mvc/Views/OrderConfirm/Index.cshtml
+++ b/OpenAuth.Mvc/Views/OrderConfirm/Index.cshtml
@@ -97,7 +97,7 @@
                 <div class="form-group">
                     <label class="col-sm-1 control-label no-padding-right" for="">每箱单价</label>
                     <div class="col-sm-2">
-                        <input type="text" id="Unit_price" v-model="Unit_price" placeholder="每箱单价" maxlength="10" isvalid="yes" checkexpession="Num" errormsg="每箱单价" />
+                        <input type="text" id="Unit_price" v-model="Unit_price" placeholder="每箱单价" maxlength="10" isvalid="yes" checkexpession="Double" errormsg="每箱单价" />
                     </div>
                 </div>
 
