--- a/OpenAuth.Mvc/Views/OrderConfirm/Index.cshtml
+++ b/OpenAuth.Mvc/Views/OrderConfirm/Index.cshtml
@@ -49,7 +49,7 @@
                                     @*<input type="text" class="form-control" style="width:80px;" id="qryOrderStatus" maxlength="30" placeholder="请输入" />*@
                                     <select id="qryOrderStatus" class="form-control" style="width:80px;">
                                         <option value="">全部</option>
-                                        <option value="0">未确认</option>
+                                        <option value="0" selected>未确认</option>
                                         <option value="1">待审核</option>
                                         <option value="2">已审核</option>
                                     </select>
