added footer on page Login and MainPage

--- a/OpenAuth.Mvc/Views/Shared/_Layout.cshtml
+++ b/OpenAuth.Mvc/Views/Shared/_Layout.cshtml
@@ -147,6 +147,7 @@
             <div class="footer-inner">
                 <!-- #section:basics/footer -->
                 <div class="footer-content">
+                    粤ICP备17065424号&nbsp;&nbsp;
                     <span class="bigger-120">
                         <span class="blue bolder">深圳达库文件档案存储管理系统</span>
                     </span>
