--- a/OpenAuth.Mvc/Views/Login/Index.cshtml
+++ b/OpenAuth.Mvc/Views/Login/Index.cshtml
@@ -95,5 +95,17 @@
             </div><!-- /.main-content -->
         </div><!-- /.main-container -->
         <!-- basic scripts -->
+        <div class="footer">
+            <div class="footer-inner">
+                <!-- #section:basics/footer -->
+                <div class="footer-content">
+                    粤ICP备17065424号&nbsp;&nbsp;
+                    <span class="bigger-120">
+                        <span class="blue bolder">深圳达库文件档案存储管理系统</span>
+                    </span>
+                </div>
+                <!-- /section:basics/footer -->
+            </div>
+        </div>
 </body>
 </html>
